[package]
name = "pinn_heston"
version = "0.1.0"
edition = "2021"
description = "Physics-Informed Neural Network for the Heston Stochastic Volatility Model"
license = "MIT"

[dependencies]
ndarray = { version = "0.16", features = ["serde"] }
ndarray-rand = "0.15"
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "price_options"
path = "src/bin/price_options.rs"

[[bin]]
name = "fetch_data"
path = "src/bin/fetch_data.rs"

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"

[[example]]
name = "basic_pricing"
path = "examples/basic_pricing.rs"
